--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 
     Hello world!
     
+    <details>
+        <summary>Info</summary>
+        A greetings to a shared place of existence and living.
+    </details>
 </body>
 </html>
