--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <h1>Hello world!</h1>
+    </header>
     <h1>Hello world!</h1>
     
     <details>
