--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>Hello world!</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -15,13 +16,13 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <h1>Hello world!</h1>
     </header>
-    <h1>Hello world!</h1>
-    
-    <details>
-        <summary>Info</summary>
-        A greetings to a shared place of existence and living.
-    </details>
+    <main>
+        <h2>Hello world!</h2>
+        <details>
+            <summary>Info</summary>
+            A greetings to a shared place of existence and living.
+        </details>
+    </main>
 </body>
 </html>
