--- a/index.html
+++ b/index.html
@@ -12,17 +12,33 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
+<section>
+    <h2>Mat</h2>
+    <ol>
+        <li>Burger</li>
+        <li>Pølser</li>
+        <li>Pizza</li>
+    </ol>
+</section>
+
+
         <h2>Hello world!</h2>
         <details>
             <summary>Info</summary>
             A greetings to a shared place of existence and living.
         </details>
     </main>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
